[package]
name = "reddit_crawler_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
backoff = "0.4"
calamine = "0.21"
clap = { version = "4", features = ["derive"] }

# DuckDB: bundle the C library to avoid linker issues (-lduckdb)
duckdb = { version = "1.3.2", features = ["bundled"] }

# Governor (rate limiting) — no default features, keep std + dashmap
governor = { version = "0.6", default-features = false, features = ["std", "dashmap"] }

indicatif = "0.17"
rand = "0.8"

# Reqwest over rustls, no default features except what you specify
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebDriver client (Tokio runtime is default)
thirtyfour = "0.33.1"

tokio = { version = "1.38", features = ["full"] }
crossbeam-channel = "0.5"
futures = "0.3"

# --- Fix for earlier build failure in idna_adapter / ICU ---
# Some transitive deps (e.g., iri-string -> idna_adapter) require ICU compiled data.
# Enabling this feature here resolves "can't find crate for `icu_*`" errors.
idna_adapter = { version = "1.2.1", features = ["compiled_data"] }
icu_normalizer = { version = "1.4.3", features = ["compiled_data"] }
icu_properties = { version = "1.4.2", features = ["compiled_data"] }

# If you ever MUST stay on older duckdb (<1.x), instead add:
# [patch.crates-io]
# chrono = "=0.4.39"
